<resources>
    <string name="app_name">All Puranas Hindi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_puran">Puranas</string>
    <string name="menu_veda">Vedas &amp; Upanishads</string>
    <string name="menu_geeta">Geetamrit</string>
    <string name="menu_hd_books">HD Books</string>
    <string name="menu_festive">Festive Books</string>
    <string name="menu_others">More Books</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_updesh">Thoughts Exchange</string>

    <string name="menu_share">Invite Friends</string>

    <string name="getPDFButton">Read Complete Book</string>

    <string name="rs">\u20B9</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="menu_favorite">My Favorites</string>
    <string name="menu_offline">Offline Books</string>
    <string name="menu_prime">Go Prime</string>

    <string name="prime_intro1">सभी विज्ञापन Prime सदस्यों के लिए हटा दिए जाएंगे। आपका ऐप जीवनकाल के लिए पूरी तरह से <b>विज्ञापन मुक्त</b> हो जाएगा</string>
    <string name="prime_intro2">सभी सशुल्क <b>पुस्तकें</b> और भविष्य की पुस्तकें जो इस ऐप में जोड़ी जाएंगी, Prime सदस्यों के लिए <b>नि:शुल्क</b> बन जाएंगी। यह जीवनकाल के लिए प्रभावी होगा</string>


    <string name="prime_intro1_en">All ads will be removed for Prime members. Your app will be completely <b>ad free</b> for lifetime</string>
    <string name="prime_intro2_en">All paid <b>Books</b> and future books that will be added to this app will become <b>Free</b> for Prime members. It will be effective for lifetime</string>
    <string name="prime_intro3">All books free | No ads forever</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="go_to">Go to page</string>
    <string name="night_mode_on">Turn on reading mode</string>
    <string name="night_mode_off">Turn off reading mode</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="login_with_email_password">Login with Email/Password</string>
    <string name="login_with_phone_number">Login with Phone Number</string>
    <string name="login_error_msg">Login failed! Invalid email or password</string>
    <string name="generic_error_msg">Something went wrong. Please try again later</string>
    <string name="register_error_msg">Registration failed! This user may already registered with us</string>
    <string name="enter_otp_des_text">Select your country code and enter your phone number to get OTP</string>
    <string name="login_email_des_text">Enter your email and password to login into the app</string>

    <string name="default_country_code">US</string>
    <string name="field_required">Required</string>
    <string name="field_invalid">Invalid</string>
    <string name="otp_frg_tag">opt_frag</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="login_error">Login error, please try again later</string>
    <string name="send_opt">Send OTP</string>
    <string name="sending_opt">Sending OTP</string>
    <string name="auto_retrieving_opt">Auto retrieving OTP</string>
    <string name="otp_success">OTP sent successfully</string>
    <string name="wrong_otp">Login error! You have entered wrong OTP</string>
    <string name="verifying_code">Verifying code</string>
    <string name="enter_otp"><u>Enter OTP</u></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forget_password_tag">forget_password_frg</string>
    <string name="sign_up_des">Enter your details along with a valid email Id, to create your account</string>
    <string name="password_error">Password must be of minimum 6 characters, no space, 1 special character</string>
    <string name="login_progress">Logging in</string>
    <string name="login_button">Login</string>
    <string name="register_progress">Registering user</string>
    <string name="register_now">Register Now</string>
    <string name="resend_otp_error">Could not send you OTP at this time please try again later</string>
    <string name="verify_email_first">Please verify your email first, check your inbox!</string>
    <string name="verification_email_not_sent">Could not verify your account at this time, please check your email address.</string>

    <string name="default_on_name">No Name</string>
    <string name="user_data_update_tag">update_user_data_frg</string>
    <string name="picture_tag">picture_frg</string>
    <string name="logout">Logout</string>
    <string name="search_tag">search_fragment</string>
    <string name="puran_collection_name">puran_collection</string>
    <string name="no_search_history">no search history</string>
    <string name="view_all">more >></string>
    <string name="favorite_key">favorite</string>
    <string name="offline_key">offline</string>
    <string name="parts_key">parts</string>
    <string name="support_us">Support Us</string>
    <string name="support_us_en">Our mission is to spread the great knowledge of Sanatan Dharma and we want to take this App and more similar apps to higher levels.To keep our work on, we have to spend on many resources(e.g server), so we need your support. So please support us and become a part of our Sanatan family and our mission.</string>
    <string name="support_us_hn">हमारा मिशन सनातन धर्म के महान ज्ञान का प्रसार करना है और हम इस ऐप और इसी तरह के अन्य ऐप को उच्च स्तर पर ले जाना चाहते हैं। अपना काम जारी रखने के लिए, हमें कई संसाधनों (जैसे सर्वर) पर खर्च करना होगा, इसलिए हमें आपके समर्थन की आवश्यकता है। तो कृपया हमारा समर्थन करें और हमारे सनातन परिवार और हमारे मिशन का हिस्सा बनें।</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="support_us_tag">support_us_frg</string>
    <string name="sanatan_welcome_msg">Thank you and welcome to our Sanatana Family</string>
    <string name="sanatana_error_msg">Some error occurred while saving your data</string>

    <string name="unity_game_id">3531397</string>
    <string name="full_video_tag">full_video_frg</string>
    <string name="motivation_base_tag">motivation_base_frg</string>
    <string name="daily_motivation">Daily Motivation</string>


</resources>
