<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PrimeActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/toolbarCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_toolbar"
        android:layout_marginStart="@dimen/margin_toolbar"
        android:layout_marginEnd="@dimen/margin_toolbar"
        android:layout_marginBottom="0dp"
        app:cardCornerRadius="15dp"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorWhiteSmoke"
                app:popupTheme="@style/AppTheme.PopupOverlay" >

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:src="@drawable/purana_logo_new"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>
    </androidx.cardview.widget.CardView>


    <include
        android:id="@+id/placeholder"
        layout="@layout/scroller_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/placeholder"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/primeImageContainer"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_centerHorizontal="true"
                app:cardCornerRadius="90dp"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_prime_icon_24"
                    android:scaleType="fitXY"
                    />
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/primeImageContainer"
                android:id="@+id/info1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="30dp"
                >

                <TextView
                    android:id="@+id/intro1Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/prime_intro1"
                    android:textSize="14sp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/info2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/info1"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                >

                <TextView
                    android:id="@+id/intro2Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/prime_intro2"
                    android:textSize="14sp" />
            </RelativeLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchEnglish"
                android:layout_below="@+id/info2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:textSelectHandleRight="@color/accent"
                android:text="English"/>

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buyButton"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/prime_intro3"
            android:textSize="10sp" />
    </RelativeLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buyButton"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:text="Checkout"
        app:cornerRadius="15dp"
        android:backgroundTint="@color/accent"
        android:textColor="@color/white"
        />
    <ProgressBar
        android:id="@+id/progressOuter"
        android:visibility="gone"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:elevation="10dp"
        android:theme="@style/ProgressBarTheme"
        />
</RelativeLayout>